tests/should_fail/struct_pattern_extra_fields.nv
module fail_struct_pat_extra_fields
struct Point { x: Int, y: Int }
let p = Point(1, 2)
match p {
    Point { x, y, z } => println(x),
    _ => println("miss")
}
